# kinova_hardware_interface

./: CMakeLists.txt  package.xml
include/kinova_hardware_interface/: jaco2_rs485.h
launch/: kinova_HI.launch  kinova_LowLevel_HI.launch  kinova_fake_HI.launch  kinova_vel_HI_control.launch
src/: jaco2_rs485.cpp  kinovaFakeHI.cpp  kinovaHI.cpp  kinovaHI_vel.cpp  kinovaLowLevelHI.cpp  talker_frc.cpp
