<?xml version="1.0"?>
<package format="2">
  <name>kinova_hardware_interface</name>
  <version>0.0.0</version>
  <description>The kinova_harware_interface package</description>

  <maintainer email="csl-mini-pc@todo.todo">csl-mini-pc</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>hardware_interface</exec_depend>

</package>
